# patent-research

./: .gitattributes  .gitignore  AI_AGENT_GUIDE.md  CLAUDE.md  DATA_CONSOLIDATION_REPORT.md  DEVELOPER_ONBOARDING_GUIDE.md  DIRECTORY_CLEANUP_REPORT.md  FINAL_RESEARCH_REPORT.md  PROJECT_HANDOFF_DOCUMENT.md  README.md  launch_atlas.sh  openai_baseline_comparison.jsonl  openai_baseline_comparison.jsonl.partial  patent_embeddings_atlas.parquet  patent_metadata_only.parquet  production_10k_all_bge-m3_20250912_150410_bge-m3_embeddings.jsonl  production_10k_all_mxbai-embed-large_20250912_150410_mxbai-embed-large_embeddings.jsonl  production_10k_all_nomic-embed-text_20250912_150410_nomic-embed-text_embeddings.jsonl  pyproject.toml  ruff.toml  test_batch_requests.jsonl  test_batch_requests_summary.json
.claude/: settings.local.json
analysis/: model_intersection_results.json
code/: README.md  analyze_chunking_performance.py  analyze_classifications.py  auto_complete_benchmark.py  comprehensive_embedding_benchmark.py  continuous_embedding_job.py  convert_to_jsonl.py  convert_to_parquet.py  create_visualizations.py  cross_encoder_reranker.py  dimensionality_reduction_large.py  download_large_diverse_patents.py  download_patents.py  empirical_openai_evaluation.py  experiment_tracker.py  fair_comparison_benchmark.py  find_missing_bge_embeddings.py  fix_missing_classifications.py  generate_bge_m3_for_fair_comparison.py  generate_embeddings.py  generate_embeddings_multimodel.py  google_patents_baseline.py  launch_atlas.py  main.py  model_intersection_analysis.py  semantic_search.py  (+16 more)
(+1239 files in other folders)
