[project]
name = "patent-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "embedding-atlas>=0.9.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.34.4",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "ollama>=0.5.3",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "pydantic-ai>=1.0.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
